LWC-1454: convert cert code to use httpclient.